--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
         <a href="#contact">Contact</a>
       </div>
       <div class="footer-social">
-        <a href="your-twitter-link"><i class="fab fa-twitter"></i></a>
-        <a href="your-instagram-link"><i class="fab fa-instagram"></i></a>
-        <a href="your-facebook-link"><i class="fab fa-facebook"></i></a>
+        <a href="your-twitter-link"><!-- <i class="fab fa-twitter">TWITTER</i> --> <img class="footer-img" src="twitter-logo-24.png" alt=""> </a>
+        <a href="your-instagram-link"><!-- <i class="fab fa-instagram">INSTAGRAM</i> --> <img class="footer-img" src="instagram-logo-24.png" alt=""> </a>
+        <a href="your-facebook-link"><!-- <i class="fab fa-facebook">FACEBOOK</i> --> <img class="footer-img" src="facebook-logo-24.png" alt=""> </a>
       </div>
       <p>&copy; 2024 5ILENCE. All rights reserved.</p>
     </footer>
