added hero section bg

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YT channel display</title>
+    <title>YT Channel Display</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -31,10 +31,10 @@
       <!-- -------------------- -->
       <!-- ----Hero Section---- -->
       <!-- -------------------- -->
-      <section id="hero" style="background-image: url('your-hero-image.jpg');">
+      <section id="hero" style="background-image: url('Hero-Section-BG.png');">
         <div class="hero-content">
-          <h1>Your Channel Name</h1>
-          <p>Your Channel Tagline</p>
+          <h1>5ilence</h1>
+          <p>- Gaming videos -</p>
           <a href="https://www.youtube.com/@5ilence01?sub_confirmation=1" class="subscribe-button"><!-- <img src="youtube-logo-24.png" alt="">  -->Subscribe</a>
         </div>
       </section>
